Font Awesomeに適用する色を指定

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -61,8 +61,11 @@ h1, h2, h3, h4, h5, h6 {
 .font-zh, .font-zh input {
   font-family: "STHeiti", "Microsoft YaHei", "Arial", "Helvetica Neue", "Helvetica", "Verdana", sans-serif;
 }
-.fa, .fas {
+.fa {
   color: #0d7b91;
+}
+.fas {
+  color: #668ad8;
 }
 .header {
   width: 100%;
