いったんアップ

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -37,6 +37,12 @@
     お知らせいただき、ありがとうございます！<br>
     ぜひご意見をお聞かせください。
     </span>
+      <div>
+        <input class="enqueteBtn" id="feedback_difficult_to_understand" type="button" value="内容がわかりにくかった" >
+        <input class="enqueteBtn" id="feedback_cannot_resolve" type="button" value="解決できなかった" >
+        <input class="enqueteBtn" id="feedback_want_another_info" type="button" value="知りたい内容とちがった" >
+        <input class="enqueteBtn" id="feedback_others" type="button" value="その他" >
+      </div>
     <div id="additionnalEnquate" style="display:none;">
       <div>【任意】困っていることを教えてください。</div>
         <textarea id="additionnalEnquate_textArea" name="questions[74182]" placeholder = "・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があると嬉しい" ></textarea>
