ハイフンをアンダーバーに

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -11,13 +11,13 @@
     <div id="enqueteYesOrNoBtns">
       この記事は役に立ちましたか？
       <div class="btn-article-vote">
-          <a href="#" class="btn-article-vote-up" >
+          <a href="#" class="btn_article_vote_up" >
             <span class="fa-stack">
                 <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fas fa-thumbs-up fa-stack-1x"></i>
             </span>
           </a>
-          <a href="#" class="btn-article-vote-down">
+          <a href="#" class="btn_article_vote_down">
               <span class="fa-stack">
                   <i class="fas fa-circle fa-stack-2x"></i>
                   <i class="fas fa-thumbs-down fa-stack-1x"></i>
