×ボタンができた！

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -31,7 +31,7 @@
     </span>
     <span id="enqueteSorry" style="display:none;">
         <div id="enquete_close" align="right">
-            <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close">&times;</button>
+            <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close"><i class="far fa-times-circle"></i></button>
         </div>
       お知らせいただき、ありがとうございます！<br>
       ぜひご意見をお聞かせください。
