--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -363,7 +363,7 @@
                     {{- end -}}
 
                     <!-- convert the img path to the local path -->
-                    <!--{{- $cont = replaceRE "/k/img" "./k/img" $cont -}}-->
+                    {{/* - $cont = replaceRE "/k/img" "./k/img" $cont - */}}
 
                     {{- $cont | safeHTML -}}
                 </div><!-- close content_body -->
