いったんアップ

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -37,12 +37,22 @@
       ぜひご意見をお聞かせください。
     </span>
     <div id="additionnalEnquate" style="display:none;">
-      <div id="additionnalEnquate_feedback">
-          <input class="enqueteBtn" id="feedback_difficult_to_understand" type="button" value="内容がわかりにくかった" >
-          <input class="enqueteBtn" id="feedback_cannot_resolve" type="button" value="解決できなかった" >
-          <input class="enqueteBtn" id="feedback_want_another_info" type="button" value="知りたい内容とちがった" >
-          <input class="enqueteBtn" id="feedback_others" type="button" value="その他" >
-      </div>
+      <input id="item-1" class="radio_inline_input" type="radio" name="accessible-radio" value="item-1" checked="checked"/>
+        <label class="radio_inline_label" for="item-1">
+          内容がわかりにくかった
+        </label>
+        <input id="item-2" class="radio_inline_input" type="radio" name="accessible-radio" value="item-2"/>
+        <label class="radio_inline_label" for="item-2">
+          解決できなかった
+        </label>
+        <input id="item-3" class="radio_inline_input" type="radio" name="accessible-radio" value="item-3"/>
+        <label class="radio_inline_label" for="item-3">
+          知りたい内容とちがった
+        </label>
+        <input id="item-4" class="radio_inline_input" type="radio" name="accessible-radio" value="item-4"/>
+        <label class="radio_inline_label" for="item-4">
+          その他
+        </label>
       <div>【任意】困っていることを教えてください。</div>
         <textarea id="additionnalEnquate_textArea" name="questions[74182]" placeholder = "・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があると嬉しい" ></textarea>
         <!-- 入力できる文字数は1500文字まで。アンケートには表示しない-->
