Noのアンケート内容まで作った

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -25,36 +25,36 @@
           </button>
       </div>
     </div>
-    <span id="enqueteThanks" style="display:none;">
+    <div id="enqueteThanks" style="display:none;">
       お知らせいただき、ありがとうございます！<br>
       お役に立てて嬉しいです。
-    </span>
-    <span id="enqueteSorry" style="display:none;">
+    </div>
+    <div id="enqueteSorry" style="display:none;">
         <div id="enquete_close" align="right">
             <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close"><i class="far fa-times-circle"></i></button>
         </div>
       お知らせいただき、ありがとうございます！<br>
       ぜひご意見をお聞かせください。
-    </span>
+    </div>
     <div id="additionnalEnquate" style="display:none;">
-      <input id="item-1" class="radio_inline_input" type="radio" name="accessible-radio" value="item-1" checked="checked"/>
+      <input id="item-1" class="radio_inline_input" type="radio" name="accessible-radio" value="フォームブリッジのフィール値を入れる"/>
         <label class="radio_inline_label" for="item-1">
           内容がわかりにくかった
         </label>
-        <input id="item-2" class="radio_inline_input" type="radio" name="accessible-radio" value="item-2"/>
+        <input id="item-2" class="radio_inline_input" type="radio" name="accessible-radio" value="フォームブリッジのフィール値を入れる"/>
         <label class="radio_inline_label" for="item-2">
           解決できなかった
         </label>
-        <input id="item-3" class="radio_inline_input" type="radio" name="accessible-radio" value="item-3"/>
+        <input id="item-3" class="radio_inline_input" type="radio" name="accessible-radio" value="フォームブリッジのフィール値を入れる"/>
         <label class="radio_inline_label" for="item-3">
           知りたい内容とちがった
         </label>
-        <input id="item-4" class="radio_inline_input" type="radio" name="accessible-radio" value="item-4"/>
+        <input id="item-4" class="radio_inline_input" type="radio" name="accessible-radio" value="フォームブリッジのフィール値を入れる"/>
         <label class="radio_inline_label" for="item-4">
           その他
         </label>
-      <div>【任意】困っていることを教えてください。</div>
-        <textarea id="additionnalEnquate_textArea" name="questions[74182]" placeholder = "・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があると嬉しい" ></textarea>
+      <div class="additionnalEnquate_textArea_title">【任意】困っていることを教えてください。</div>
+        <textarea id="additionnalEnquate_textArea" maxlength="1500" name="questions[74182]" placeholder = "・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があると嬉しい" ></textarea>
         <!-- 入力できる文字数は1500文字まで。アンケートには表示しない-->
         <div id="enquete_note">
          <ul>
