いったんアップ

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -30,7 +30,7 @@
       お役に立てて嬉しいです。
     </div>
     <div id="enqueteSorry" style="display:none;">
-        <div id="enquete_close" align="right">
+        <div id="enquete_close">
             <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close"><i class="far fa-times-circle"></i></button>
         </div>
       お知らせいただき、ありがとうございます！<br>
@@ -54,7 +54,7 @@
           その他
         </label>
       <div class="additionnalEnquate_textArea_title">【任意】困っていることを教えてください。</div>
-        <textarea id="additionnalEnquate_textArea" maxlength="1500" name="questions[74182]" placeholder = "・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があると嬉しい" ></textarea>
+        <textarea id="additionnalEnquate_textArea" maxlength="1500" name="questions[74182]" placeholder="・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があるとよい" ></textarea>
         <!-- 入力できる文字数は1500文字まで。アンケートには表示しない-->
         <div id="enquete_note">
          <ul>
