いったんアップ

--- a/layouts/partials/enquete.html
+++ b/layouts/partials/enquete.html
@@ -26,11 +26,24 @@
       </div>
     </div>
     <div id="enqueteThanks" style="display:none;">
+      <div class="enquete_close">
+        <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close"><i class="far fa-times-circle"></i></button>
+      </div>
       お知らせいただき、ありがとうございます！<br>
       お役に立てて嬉しいです。
+      <div class="additionnalEnquate_textArea_title">【任意】困っていることを教えてください。</div>
+        <textarea id="additionnalEnquate_textArea" maxlength="1500" name="questions[74182]" placeholder="・○○○のような使い方がしたいが方法が分からない&#13;&#10;・○○○に関する情報があるとよい" ></textarea>
+        <!-- 入力できる文字数は1500文字まで。アンケートには表示しない-->
+        <div id="enquete_note">
+         <ul>
+          <li>個人情報や秘密保持義務のある情報を含めないでください。</li>
+          <li>質問や要望への返答は行っておりません。</li>
+         </ul>
+        </div>
+        <input type="submit" value="送信する" id="feedback_send" class="enqueteBtn btn_disabled">
     </div>
     <div id="enqueteSorry" style="display:none;">
-        <div id="enquete_close">
+        <div class="enquete_close">
             <button type="button" id="feedback_sendWithoutComment" class="enqueteBtn_close"><i class="far fa-times-circle"></i></button>
         </div>
       お知らせいただき、ありがとうございます！<br>
