--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -816,7 +816,7 @@ cursor: pointer;
   margin-top: 10px;
 }
 
-#additionnalEnquate_textArea {
+.additionnalEnquate_textArea {
   width: 100%;
   height: 39px;
   margin: auto;
@@ -832,6 +832,7 @@ cursor: pointer;
   /* height: 27px; */
   font-size: 1.1rem;
   margin-bottom: 10px;
+  width: 700px;
 }
 .seealso {
   font-size: 1rem;
