補足のアイコンをペンシルに変更、背景色を薄くする

--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,6 +1,6 @@
 <aside class="admonition note">
   <div class="admonition-alt">
-    <i class="fas fa-check"></i>
+    <i class="fas fa-pencil-alt"></i>
     <span>
     {{- if eq $.Site.Params.LanguageName "日本語" -}}補足
     {{- else if eq $.Site.Params.LanguageName "English" -}}Note
