Revert "補足のアイコンをペンシルに変更、背景色を薄くする"
This reverts commit 171d70cfd954ad9f79c7334f80f4fd08cc3c0f03.

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -289,7 +289,7 @@ overflow-y: scroll;
 }
 .article .admonition.note {
   border: 1px solid #a7cde1;
-  background-color: #f0f8ff;
+  background-color: #d9edf7;
   border-radius: 10px;
 }
 .article .admonition.note .fas {
