--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -803,9 +803,9 @@ cursor: pointer;
   background: #a8a8a8;
 }
 .additionnalEnquate {
-  max-width: 700px;
   margin: auto;
   font-size: 1rem;
+  max-width: 700px;
 }
 #additionnalEnquate_feedback {
   float: left;
@@ -834,7 +834,6 @@ cursor: pointer;
   /* height: 27px; */
   font-size: 1.1rem;
   margin-bottom: 10px;
-  width: 700px;
 }
 .seealso {
   font-size: 1rem;
@@ -898,6 +897,9 @@ cursor: pointer;
 .wrap_sidebar {
   width: 200px;
   flex-shrink: 0;
+}
+#enqueteThanks, #enqueteSorry {
+  width: 700px;
 }
 }
 
