--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -289,7 +289,7 @@ overflow-y: scroll;
 }
 .article .admonition.note {
   border: 1px solid #a7cde1;
-  background-color: #d9edf7;
+  background-color: #F0F8FF;
 }
 .article .admonition.note .fas {
   color: #4496d3;
