アンケートのVoteUP/VoteDownのアイコンをクリックできると分かるようにする
https://bozuman.cybozu.com/k/#/space/22/thread/39194/2212687/2901257

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -725,6 +725,9 @@ cursor: pointer;
   text-decoration: none;
   font-size: 25px;
 }
+.fa-stack{
+  cursor: pointer;
+}
 .btn_article_vote .fa-stack-1x {
   color: #ffffff;
   font-size: 18px;
