--- a/layouts/partials/alternatelink.html
+++ b/layouts/partials/alternatelink.html
@@ -2,27 +2,11 @@
 {{ .Scratch.Set "domain_us" "https://help.kintone.com" }}
 {{ .Scratch.Set "domain_cn" "https://help.cybozu.cn" }}
 
-{{ if eq .Site.LanguageCode "ja-jp" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}" hreflang="ja-us" />
-    <link rel="alternate" href="{{ .Scratch.Get "domain_cn" }}{{ .Permalink | relURL }}" hreflang="ja-cn" />
-{{ end }}
-{{ if eq .Site.LanguageCode "ja-us" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="ja-jp" />
-    <link rel="alternate" href="{{ .Scratch.Get "domain_cn" }}{{ .Permalink | relURL }}" hreflang="ja-cn" />
-{{ end }}
-{{ if eq .Site.LanguageCode "ja-cn" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="ja-jp" />
-    <link rel="alternate" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}" hreflang="ja-us" />
-{{ end }}
-{{ if eq .Site.LanguageCode "en-jp" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}" hreflang="en-us" />
-{{ end }}
-{{ if eq .Site.LanguageCode "en-us" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="en-jp" />
-{{ end }}
-{{ if eq .Site.LanguageCode "zh-jp" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_cn" }}{{ .Permalink | relURL }}" hreflang="zh-cn" />
-{{ end }}
-{{ if eq .Site.LanguageCode "zh-cn" }}
-    <link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="zh-jp" />
-{{ end }}
+<link rel="canonical" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}">
+<link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="ja-jp" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}" hreflang="ja-us" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_cn" }}{{ .Permalink | relURL }}" hreflang="ja-cn" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_us" }}{{ .Permalink | relURL }}" hreflang="en-us" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="en-jp" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_cn" }}{{ .Permalink | relURL }}" hreflang="zh-cn" />
+<link rel="alternate" href="{{ .Scratch.Get "domain_jp" }}{{ .Permalink | relURL }}" hreflang="zh-jp" />
