for Hugo 0.55 Shortcodes Revised

--- a/layouts/shortcodes/reference.html
+++ b/layouts/shortcodes/reference.html
@@ -1,3 +1,4 @@
+{{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition reference">
   <div class="admonition-alt">
     <i class="fas fa-book fa-lg"></i>
