--- a/layouts/shortcodes/seealso.html
+++ b/layouts/shortcodes/seealso.html
@@ -1,3 +1,4 @@
+{{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="referrence">
 <h1>{{- .Get "title" -}}</h1>
 {{ printf "%s" .Inner | markdownify }}
