--- a/layouts/shortcodes/tile.html
+++ b/layouts/shortcodes/tile.html
@@ -1,3 +1,4 @@
+{{- $_hugo_config := `{ "version": 1 }` -}}
 <div class="col-tile">
     {{- .Scratch.Set "target" "_self" -}}
     {{- if eq (.Get "external") "true" -}}
