--- a/layouts/shortcodes/hint.html
+++ b/layouts/shortcodes/hint.html
@@ -1,3 +1,4 @@
+{{- $_hugo_config := `{ "version": 1 }` -}}
 <aside class="admonition hint">
   <div class="admonition-alt">
     <span class="admonition-alt-text">
